--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,6 @@
 <footer>
-    webmcast // <a href="https://github.com/pyos/webmcast">source code</a>
-    {{/* todo: tos, privacy policy, ... */}}
+    <span>webmcast</span>
+    <a href="#">Terms of Service</a>
+    <a href="#">Privacy Policy</a>
+    <a href="https://github.com/pyos/webmcast"><span class="icon">&#xf09b;</span> Source Code</a>
 </footer>
