--- a/templates/nav.html
+++ b/templates/nav.html
@@ -6,7 +6,7 @@
     <a href="/user/logout">Log out</a>
 {{- else }}
     <a href="/user/login">Log in</a>
-    <a href="/user/new" class="text-button">Sign up</a>
+    <a href="/user/new" class="button">Sign up</a>
 {{- end }}
 </nav>
 <template id="login-form-template">
