--- a/templates/user-config.html
+++ b/templates/user-config.html
@@ -13,10 +13,10 @@
                 <img width="60" height="60" src="{{.User.Avatar 60}}" alt="Gravatar" />
                 <div>
                     <h1>Hey there, {{.User.Name}}.</h1>
-                    <h2>Stream URL:
+                    <span>Stream URL:
                         <a href="/stream/{{.User.Login}}?{{.User.StreamToken}}">Publish</a>
                      // <a href="/{{.User.Login}}">View</a>
-                     // <a href="/stream/{{.User.Login}}">Download</a></h2>
+                     // <a href="/stream/{{.User.Login}}">Download</a></span>
                 </div>
             </section>
         {{- if not .User.Activated }}
