--- a/templates/room.html
+++ b/templates/room.html
@@ -41,7 +41,7 @@
                     <video crossorigin="anonymous"></video><div class="controls">
                         <a href="#" class="button icon play" title="Play">&#xf04b;</a>
                         <a href="#" class="button icon reload" title="Reload">&#xf021;</a>
-                        <a href="#" class="button icon stop" title="Stop">&#xf04d;</a>
+                        <a href="#" class="button icon stop" title="Stop">&#xf04c;</a>
                         <a href="#" class="button icon mute" title="Mute">&#xf028;</a>
                         <a href="#" class="button icon unmute" title="Unmute">&#xf026;</a>
                         <div tabindex="0" class="volume" title="Volume"><div class="slider"></div></div>
@@ -56,7 +56,7 @@
                     <h1>#{{.ID}}</h1>
                     <ul class="log" data-scrollbar></ul>
                     <div class="error-message"></div>
-                    <div class="offline-message">Chat offline.</div>
+                    <div class="offline-message">The chat is offline.</div>
                     <form class="login-form">
                         <textarea tabindex="1" class="input" cols="1" rows="1" placeholder="What's your name?"></textarea>
                         <a href="#" class="button icon join" title="Join" data-submit>&#xf090;</a>
