Use a javascript-based column layout.
CSS3 columns are barely supported, look weird in WebKit (which allows
margins to flow to the other column for some reason???) and grow
top-down first.

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -342,13 +342,17 @@ a.button.icon {
     content: '\f00d';
 }
 
-.row {
+.row, [data-columns] {
     display: flex;
     flex-wrap: wrap;
 }
 
 .row > * {
     flex: 1 0;
+}
+
+[data-columns] {
+    align-items: flex-start;
 }
 
 .user-header {
