--- a/static/css/room.css
+++ b/static/css/room.css
@@ -32,7 +32,7 @@
 }
 
 .player-block:not(.theatre) .player.has-video:not(.is-fullscreen) {
-    border-radius: 1em 1em 0 0;
+    border-radius: 1em;
 }
 
 .chat,
@@ -161,45 +161,23 @@
     height: 2.4em;  /* = 1.5 * 1.6em = h1's height */
 }
 
-.stream-about {
-    column-gap: 1rem;
-    -moz-column-gap: 1rem;
-    -webkit-column-gap: 1rem;
-    column-count: 2;
-    -moz-column-count: 2;
-    -webkit-column-count: 2;
-    padding: 0 2rem;
-}
-
-@media (max-width: 30em) {
-    .stream-about {
-        padding: 0;
-    }
+.stream-about > * {
+    width: 50%;
 }
 
 @media (max-width: 50em) {
-    .stream-about {
-        column-count: 1;
-        -moz-column-count: 1;
-        -webkit-column-count: 1;
+    .stream-about > * {
+        width: 100%;
     }
 }
 
 .stream-about .panel {
     position: relative;
-    min-height: 200px;
-    padding: 1px 1rem;
     word-wrap: break-word;
-    box-sizing: border-box;
-    break-inside: avoid;
-    page-break-inside: avoid;
-    -moz-column-break-inside: avoid;
-    -webkit-column-break-inside: avoid;
+    margin: 1rem;
+    padding: 1px 1rem;
+    min-height: 14rem;
     background: #fafaf6;
-}
-
-.stream-about .panel:not(:last-child) {
-    margin-bottom: 1rem;
 }
 
 .stream-about .edit {
