--- a/templates/room.html
+++ b/templates/room.html
@@ -40,7 +40,7 @@
                     <svg width="{{or .Meta.Width 853}}" height="{{or .Meta.Height 480}}"></svg>
                     <video crossorigin="anonymous"></video><div class="controls">
                         <a href="#" class="button icon play" title="Play">&#xf04b;</a>
-                        <a href="#" class="button icon reload" title="Reload">&#xf021;</a>
+                        <a href=""  class="button icon reload" title="Reload">&#xf021;</a>
                         <a href="#" class="button icon stop" title="Stop">&#xf04c;</a>
                         <a href="#" class="button icon mute" title="Mute">&#xf028;</a>
                         <a href="#" class="button icon unmute" title="Unmute">&#xf026;</a>
