Display the stream owner's self-description (if any).

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -83,6 +83,10 @@ footer > * {
     margin: 0;
 }
 
+[hidden] {
+    display: none !important;
+}
+
 [data-scrollbar] {
     position: relative;
     overflow-x: hidden;
